2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/Properties.cs: Improve performance of Get method.

2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: Add a WaitForOutput overload
	  with a time limit.

2008-02-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/Runtime.cs: Use MD's config directory for addin engine
	  too. More cross-platform safe, and ensures that they're always the same
	  directory (previously, unusual combinations of environment variables
	  could cause them to differ).
	* MonoDevelop.Core/PropertyService.cs: Make config directory more
	  cross-platform safe.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.addin.xml: Update MD version.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/GettextCatalog.cs: Fix logic that determines the location
	  of locale directory.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/FileService.cs: Make NotifyFileChanged safer against
	  exceptions.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.ProgressMonitoring/NullProgressMonitor.cs: Added new
	  override.
	* MonoDevelop.Core/Runtime.cs: Use a version specific default MD add-in
	  repo.

2008-01-17  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessHostController.cs:
	  If MD is running in debug mode (i.e. stack traces have line numbers)
	  then the process hosting RemoteProcessObjects should be in debug 
	  mode too. Also, remove an "sh" call to improve portability.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/Runtime.cs: Get add-ins from a version specific
	  repository.

2008-01-16  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am, MonoDevelop.Core.mdp, MonoDevelop.Core/GettextCatalog.cs,
	  MonoDevelop.Core/GettextCatalog.cs.in: Make Gettext catalogue path